chore(ci): Delete unused functions and update to alpine3.8
related to #SRE-155